# django_auth

./: .gitignore  pyproject.toml  requirements.txt  requirements_dev.txt
backend/: settings.py  urls.py
backend/authtokens/: apps.py  urls.py
backend/users/: admin.py  models.py  serializers.py  urls.py  views.py
backend/users/migrations/: 0001_initial_users_migration.py
